@@ -1,0 +1,37 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <title>Web GLI Profile Setup</title>
+</head>
+<body>
+
+<table cellpadding="0" cellspacing="5">
+	<tr>
+		<td width=200>Picture here. Gentoo Logo</td><td><img src="banner-800x64.png">
+		</td>
+	</tr>
+	<tr>
+		<td valign="top"><p><a href="webgli.py">Welcome</a></p>
+			<p><a href="webgli.py?page=ClientConfig">Client Config</a></p>
+			<p><a href="webgli.py?page=Partitioning">Partitioning</a></p>
+			<p><a href="webgli.py?page=NetworkMounts">Network Mounts</a></p>
+			<p><a href="webgli.py?page=Stage">Stage Selection</a></p>
+			<p><a href="webgli.py?page=PortageTree">Portage Tree</a></p>
+			<p><a href="webgli.py?page=ConfigFiles">Config Files</a></p>
+			<p><a href="webgli.py?page=Kernel">Kernel</a></p>
+			<p><a href="webgli.py?page=Bootloader">Bootloader</a></p>
+			<p><a href="webgli.py?page=Timezone">Timezone</a></p>
+			<p><a href="webgli.py?page=Networking">Networking</a></p>
+			<p><a href="webgli.py?page=Daemons">Daemons</a></p>
+			<p><a href="webgli.py?page=ExtraPackages">Extra Packages</a></p>
+			<p><a href="webgli.py?page=Users">Users</a></p>
+			<p><a href="webgli.py?page=Review">Review</a></p>
+    </td>
+    <td valign="top">
+Main content
+    </td>
+  </tr>
+</table>
+</body>
+</html>
