@@ -1,10 +1,17 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.410 2005/10/09 17:54:40 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.411 2005/10/09 18:27:20 codeman Exp $
 
 *GLI-0.3 (5 Oct 2005)
 
+  9 Oct 2005; Preston Cody <codeman@gentoo.org>
+  GenDialog: string formatting and yes/no label fixes.
+  added WebGLI template for gliserv.py
+  added WebGLIHandler as well as a definition for it in gliserv.py
+  updates to the webgli files even though they won't be there for long.
+  
+  
   10 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/ProfileHandler.py, handler.py, gliserv.py:
   main server now loads separate module to handle requests
